[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykit-utils"
version = "1.0.0"
description = "Python Utility Library for strings, files, network, crypto, datetime, and validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Mayank Basena", email = "0mayankbasena@gmail.com"}]
keywords = ["utilities", "python", "toolkit", "strings", "files", "network", "crypto", "validators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mayank-dev-15/pykit-utils"
Repository = "https://github.com/mayank-dev-15/pykit-utils"

[project.scripts]
pykit = "pykit.cli:main"
