[metadata]
name = pykit-utils
version = 1.0.0
author = Mayank Basena
author_email = mayank.dev.15@gmail.com
description = PyKit - Python Utility Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mayank-dev-15/pykit-utils
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    examples*
